Name:                forkjoin
Version:             0.1.0.0
Synopsis:            Fork/Join implementation on Haskell
Homepage:            https://github.com/tomingtoming/forkjoin
Bug-reports:         https://github.com/tomingtoming/forkjoin/issues
License:             MIT
License-file:        LICENSE
Author:              tomingtoming
Maintainer:          tomingtoming@gmail.com
Copyright:           (c) 2013 tomingtoming
Category:            Concurrency
Stability:           experimental
Build-type:          Simple
Cabal-version:       >=1.8
Description:
  Fork/Join implementation on Haskell.

Library
  Exposed-modules:     Control.Concurrent.ForkJoin
--other-modules:       
  build-depends:       base ==4.5.*, stm ==2.*
  GHC-options:         -Wall

source-repository head
  type:     git
  location: git://github.com/tomingtoming/forkjoin.git
